--- a/prh.yml
+++ b/prh.yml
@@ -141,6 +141,14 @@ rules:
     specs:
       - from: thenチェーンと言います
         to  : Promiseチェーンと言います
+  - expected: Statement
+    patterns: ステートメント
+    options:
+      wordBoundary: true
+  - expected: Expression
+    patterns: エクスプレッション
+    options:
+      wordBoundary: true
 # typo
   - expected: $1進数
     patterns:
